fix phone number, better visibility; wording

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -77,7 +77,7 @@
   top: 0px;
   text-align: right;
   color: #ff5900;
-  text-shadow: 0 0 2px rgba(255, 255, 255, 1.0); 
+  text-shadow: 0 0 2px rgba(17, 88, 209, 1.0); 
 }
 .promo-box a {
   text-decoration: underline;
